tests/fail/cap_struct_missing_read.stderr
error: expected type, found `}`
 --> tests/fail/cap_struct_missing_read.rs:6:1
  |
6 | #[capabilities(Read)]
  | ^^^^^^^^^^^^^^^^^^^^^ expected type
  |
  = note: this error originates in the attribute macro `capabilities` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `CapService: CapabilityTrait<capabilities::Read<Orders>>` is not satisfied
 --> tests/fail/cap_struct_missing_read.rs:6:16
  |
6 | #[capabilities(Read)]
  |                ^^^^ the trait `CapabilityTrait<capabilities::Read<Orders>>` is not implemented for `CapService`
  |
note: required by a bound in `CapReadOrders`
 --> tests/fail/cap_struct_missing_read.rs:6:1
  |
6 | #[capabilities(Read)]
  | ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CapReadOrders`
  = note: this error originates in the macro `cap` (in Nightly builds, run with -Z macro-backtrace for more info)
